--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -221,26 +221,9 @@
 			assetLocationElem.classList.add('asset-location');
 
 			// Edit Button
-			// var assetEditButtonElem = document.createElement('BUTTON');
-			// assetEditButtonElem.classList.add('update-asset-button');
-			// assetEditButtonElem.addEventListener('click', function () { showUpdateAssetForm(jsonData[i]) });
-			// assetEditButtonElem.innerText = "D";
-			// assetEditButtonElem.style.backgroundColor = '#008CBA';
-
-			// var assetUpdateButtonHTML = '<button class="update-asset-button" onclick="showUpdateAssetForm('
-			// 	+ "'" + jsonData[i].assetNum + "'" + ','
-			// 	+ "'" + jsonData[i].date + "'" + ','
-			// 	+ "'" + jsonData[i].deviceName + "'" + ','
-			// 	+ "'" + jsonData[i].manager + "'" + ','
-			// 	+ "'" + jsonData[i].location + "'" +
-			// 	')">E</button>';
-
 			var assetUpdateButtonHTML = '<button class="update-asset-button" onclick="showUpdateAssetForm('
 				+ "'" + jsonData[i].assetNum + "'" +
 				')">E</button>';
-
-				console.log(assetUpdateButtonHTML);
-			// document.getElementsByClassName('content')[0].innerHTML = buttonHTML;
 
 			// Set Asset Data
 			assetNumberElem.innerText = jsonData[i].assetNum;
@@ -347,7 +330,7 @@
 
 		var newSaveButtonElem = document.createElement('BUTTON');
 		newSaveButtonElem.classList.add('save-button');
-		newSaveButtonElem.addEventListener('click', function () { updateInventoryData() });
+		newSaveButtonElem.addEventListener('click', function () { updateInventoryData(assetData.assetNum) });
 		newSaveButtonElem.style.backgroundColor = '#008CBA';
 		newSaveButtonElem.innerText = 'Update';
 		document.getElementById('form-asset-container').appendChild(newSaveButtonElem);
@@ -406,7 +389,6 @@
 
 	function setInventoryData() {
 		var formData = new FormData(document.forms.namedItem("fileInfo"));
-		// formData.append('reference', '19830619');
 
 		var xhttp = new XMLHttpRequest();
 		xhttp.onreadystatechange = function () {
@@ -430,8 +412,30 @@
 		xhttp.send(formData);
 	}
 
-	function updateInventoryData() {
-		consoel.log('aa');
+	function updateInventoryData(referenceAssetNumber) {
+		var formData = new FormData(document.forms.namedItem("fileInfo"));
+		formData.append('reference', referenceAssetNumber);
+
+		var xhttp = new XMLHttpRequest();
+		xhttp.onreadystatechange = function () {
+			if (this.readyState == 4 && this.status == 200) {
+				if (this.responseText == 'success') {
+					console.log('success');
+				}
+				else {
+					console.log('fail');
+				}
+
+				console.log('return:', this.responseText);
+			}
+			else {
+				console.log(this.readyState, this.status);
+			}
+		};
+
+		var rName = "http://192.168.68.126:8080/inventory/update";
+		xhttp.open("POST", rName, false);
+		xhttp.send(formData);
 	}
 
 	function timer() {
