--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -228,7 +228,7 @@
 
 			// Edit Button
 			var assetUpdateButtonHTML = '<svg width="38" height="36" class="update-asset-button"' +
-				'onclick="showUpdateAssetForm(' + "'" + jsonData[i].assetNum + "'" + ')">' +
+				'onclick="showUpdateAssetForm(' + "'" + jsonData[i].assetNumber + "'" + ')">' +
 				'<path d="M34.84.5h1.39a2,2,0,0,1,2,2V4.42a0,0,0,0,1,0,0H32.84a0,0,0,0,1,0,0V2.5A2,2,0,0,1,34.84.5Z" transform="translate(12.15 -24.41) rotate(45)" style="fill:#fff" />' +
 				'<polygon points="31.23 2.96 12.74 21.45 10.83 27.17 16.55 25.26 35.04 6.77 31.23 2.96" style="fill:#fff" />' +
 				'<polygon points="28.77 20.7 28.77 32.77 3.23 32.77 3.23 7.23 20.5 7.23 23.74 4 0 4 0 36 32 36 32 17.47 28.77 20.7" style="fill:#fff" />' +
