add member page link

--- a/raon-control/archive.html
+++ b/raon-control/archive.html
@@ -24,7 +24,7 @@
 				style="fill:#f3f3f3" />
 		</svg>
         <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
-		<div id="accelerator-control">Accelerator Control</div>
+		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
 		<div id="menu">
 			<a href="monitoring.html">Monitoring</a>
 			<a href="schedule.html">Schedule</a>
@@ -71,78 +71,6 @@
 
 			<tbody id="tableBody">
 				<!-- <tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
-					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
-					<td>Being archived</td>
-					<td>true</td>
-					<td>true</td>
-					<td>1.0</td>
-					<td>Feb/02/2021 07:39:45 +09:00</td>
-				</tr>
-				<tr>
 					<td>SYS-SUBSYS:DEV-SUBDEV:Signal</td>
 					<td>Being archived</td>
 					<td>true</td>
