--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -29,7 +29,7 @@
                 style="fill:#f3f3f3" />
         </svg>
         <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
-        <div id="accelerator-control">Accelerator Control</div>
+		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
         <div id="menu">
             <a href="monitoring.html">Monitoring</a>
             <a href="schedule.html">Schedule</a>
