--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="common.css">
 <link rel="stylesheet" type="text/css" href="asset.css">
 <link rel="stylesheet" type="text/css" href="script/swiper-bundle.min.css">
 <script src="script/swiper-bundle.min.js"></script>
@@ -52,7 +53,14 @@
 		</svg>
 		<div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
 		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
-		<div id="menu">
+		<div id="left-menu">
+			<a href="asset.html">Asset</a>
+			<a href="bab.html" class="secret-menu">Bab</a>
+			<a href="" class="secret-menu">Logbook</a>
+			<a href="" class="secret-menu">Finder</a>
+			<a href="" class="secret-menu">Naming</a>
+		</div>
+		<div id="right-menu">
 			<a href="monitoring.html">Monitoring</a>
 			<a href="schedule.html">Schedule</a>
 			<a href="archive.html">Archive</a>
