--- a/raon-control/documents.html
+++ b/raon-control/documents.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" type="text/css" href="common.css">
 <link rel="stylesheet" type="text/css" href="document.css">
 
 <body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
         <div id="time-stamp"></div>
         <svg id="under-line" width="1920" height="42">
-          <style>
-            .under-line-style {
-              fill: none;
-              stroke: #f3f3f3;
-              stroke-miterlimit: 10;
-              stroke-width: 2px;
-            }
-          </style>
-          <polyline class="under-line-style" points="0 40 760 40 791 0" />
-          <polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
+            <style>
+                .under-line-style {
+                    fill: none;
+                    stroke: #f3f3f3;
+                    stroke-miterlimit: 10;
+                    stroke-width: 2px;
+                }
+            </style>
+            <polyline class="under-line-style" points="0 40 760 40 791 0" />
+            <polyline class="under-line-style" points="1920 40 1160 40 1129 0" />
         </svg>
         <svg id="center-top" width="400" height="80">
-          <path
-            d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
-            style="fill:#f3f3f3" />
+            <path
+                d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
+                style="fill:#f3f3f3" />
         </svg>
         <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
-		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
-        <div id="menu">
-          <a href="monitoring.html">Monitoring</a>
-          <a href="schedule.html">Schedule</a>
-          <a href="archive.html">Archive</a>
-          <a href="downloads.html">Download</a>
-          <a href="documents.html">Document</a>
+        <div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
+        <div id="left-menu">
+            <a href="asset.html">Asset</a>
+            <a href="bab.html" class="secret-menu">Bab</a>
+            <a href="" class="secret-menu">Logbook</a>
+            <a href="" class="secret-menu">Finder</a>
+            <a href="" class="secret-menu">Naming</a>
         </div>
-      </div>
+        <div id="right-menu">
+            <a href="monitoring.html">Monitoring</a>
+            <a href="schedule.html">Schedule</a>
+            <a href="archive.html">Archive</a>
+            <a href="downloads.html">Download</a>
+            <a href="documents.html">Document</a>
+        </div>
+    </div>
 
     <div style="height:160px"></div>
 
@@ -56,7 +64,8 @@
                     <div class="title-button button-green"></div>
                 </div>
                 <div class="console-body">
-                    <p><span class="no-selection">$</span> wget https://epics-controls.org/download/base/base-3.15.7.tar.gz</p>
+                    <p><span class="no-selection">$</span> wget
+                        https://epics-controls.org/download/base/base-3.15.7.tar.gz</p>
                     <p><span class="no-selection">$</span> tar xvf base-3.15.7.tar.gz</p>
                     <p><span class="no-selection">$</span> cd base-3.15.7</p>
                     <p><span class="no-selection">base-3.15.7$</span> make</p>
