--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+<link rel="stylesheet" type="text/css" href="common.css">
 <link rel="stylesheet" type="text/css" href="monitoring.css">
 
 <script src="script/moment.js"></script>
@@ -30,13 +30,20 @@
         </svg>
         <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
 		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
-        <div id="menu">
-            <a href="monitoring.html">Monitoring</a>
-            <a href="schedule.html">Schedule</a>
-            <a href="archive.html">Archive</a>
-            <a href="downloads.html">Download</a>
-            <a href="documents.html">Document</a>
-        </div>
+		<div id="left-menu">
+			<a href="asset.html">Asset</a>
+			<a href="bab.html" class="secret-menu">Bab</a>
+			<a href="" class="secret-menu">Logbook</a>
+			<a href="" class="secret-menu">Finder</a>
+			<a href="" class="secret-menu">Naming</a>
+		</div>
+		<div id="right-menu">
+			<a href="monitoring.html">Monitoring</a>
+			<a href="schedule.html">Schedule</a>
+			<a href="archive.html">Archive</a>
+			<a href="downloads.html">Download</a>
+			<a href="documents.html">Document</a>
+		</div>
     </div>
 
     <div style="height:20px"></div>
