--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -168,11 +168,12 @@
 </body>
 
 <script>
-	var imageServer = 'http://192.168.68.126:4879/image/'
-	var serverAddr = 'http://192.168.68.126:8080/inventory'
-	var retrieveAddr = serverAddr + '/retrieve/*';
-	var insertAddr = serverAddr + '/insert';
-	var updateAddr = serverAddr + '/update';
+	var serverAddr = 'http://localhost'
+	var imageServer = serverAddr + ':4879/image/'
+	var inventoryAddr = serverAddr + ':8080/inventory'
+	var retrieveAddr = inventoryAddr + '/retrieve/*';
+	var insertAddr = inventoryAddr + '/insert';
+	var updateAddr = inventoryAddr + '/update';
 
 	var slideIndex = {};
 	var swiper = new Swiper('.swiper-container', {
