--- a/raon-control/monitoring.html
+++ b/raon-control/monitoring.html
@@ -6,7 +6,6 @@
 <script src="script/moment.js"></script>
 <script src="script/chart.js@2.8.0"></script>
 <script src="script/chartjs-plugin-streaming.js"></script>
-<script src="script/common.js"></script>
 
 <body>
     <div style="margin:auto; position: relative; width:1920px; height:80px;">
@@ -28,7 +27,7 @@
                 d="M12.5,0H0L57,76a10,10,0,0,0,8,4H335a10,10,0,0,0,8-4L400,0H387.5L338,66a10,10,0,0,1-8,4H70a10,10,0,0,1-8-4Z"
                 style="fill:#f3f3f3" />
         </svg>
-        <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></img></a></div>
+        <div id="raon-box"><a href="main.html"><img src="images/raon-white.svg"></a></div>
 		<div id="accelerator-control"><a href="members.html">Accelerator Control</a></div>
 		<div id="left-menu">
 			<a href="asset.html">Asset</a>
@@ -171,6 +170,16 @@
 </body>
 
 <script>
+    var chartColors = {
+        red: 'rgb(255, 99, 132)',
+        orange: 'rgb(255, 159, 64)',
+        yellow: 'rgb(255, 205, 86)',
+        green: 'rgb(75, 192, 192)',
+        blue: 'rgb(54, 162, 235)',
+        purple: 'rgb(153, 102, 255)',
+        grey: 'rgb(201, 203, 207)'
+    };
+    
     var subBox = document.getElementById('n2-flow');
 
     var rotationID = null;
